--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8082
 # Note: Users must create a H2 db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
 
-spring.datasource.url=jdbc:mysql://localhost:8080/critter
+spring.datasource.url=jdbc:mysql://localhost:3306/critterdb
 spring.datasource.username=critter
 spring.datasource.password=12345
 spring.sql.init.mode=always
