--- a/starter/critter/src/test/resources/application.properties
+++ b/starter/critter/src/test/resources/application.properties
@@ -8,5 +8,5 @@ server.port=8082
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:crittertest
-spring.datasource.username=critter_test
+spring.datasource.username=
 spring.datasource.password=
